--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -377,6 +377,32 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 
 \noindent Overall, these tables indicate a balance between the treatment and control groups, both when considering center-based childcare and family education and only family education as treatment.
 
+Tables~\ref{tab:meducation-females} and~\ref{tab:meducation-males} show the treatment effects on maternal education, which change after baseline.
+
+\begin{table}[H]
+\centering
+\caption{Maternal Education, ABC/CARE, Females}
+\label{tab:meducation-females}
+\begin{threeparttable}
+\input{output/destable_ed_fam_abccare_0}
+\begin{tablenotes}
+\item Note: This table shows raw descriptives of the education variables. Columns (1) through (6) give the sample size, means, and standard deviations of the variables by experimental group. In this table, ``Treat." indicates the treatment group that received ABC/CARE center-based childcare and ``Control" is the control group. Column (7) gives the two-sided $p$-value for a $t$-test of means between the two groups accounting for different variances in the groups. Education level is a categorical variable with higher values corresponding to more education. The ages in parentheses are the ages of the \textit{subjects} when the measure was collected.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Maternal Education, ABC/CARE, Males}
+\label{tab:meducation-males}
+\begin{threeparttable}
+\input{output/destable_ed_fam_abccare_1}
+\begin{tablenotes}
+\item Note: This table shows raw descriptives of the education variables. Columns (1) through (6) give the sample size, means, and standard deviations of the variables by experimental group. In this table, ``Treat." indicates the treatment group that received ABC/CARE center-based childcare and ``Control" is the control group. Column (7) gives the two-sided $p$-value for a $t$-test of means between the two groups accounting for different variances in the groups. Education level is a categorical variable with higher values corresponding to more education. The ages in parentheses are the ages of the \textit{subjects} when the measure was collected.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
 
 \subsection{Details on Educare}
 \label{app:details-educare}
