--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -425,6 +425,7 @@ births in a two-year period to be appropriate. \\
 
 
 \subsubsection{FAM simulation}
+\label{appendix:health-fam-simulation}
 
 \noindent A simulation of the model starts by loading the entering cohort, generated from the ABC/CARE data. Missing values are imputed with the imputation models described in section \ref{section:FAM_ABC_impute}. To this entering cohort, the model applies the transition models for mortality, health, working status, family structure, wealth, and benefit claiming, estimated from PSID, with Monte Carlo decisions to calculate the new states of the population.
 %The simulation is performed 5,000 times and the simulated distributions of key outcomes are summarized over repetitions.
@@ -498,6 +499,7 @@ GDP assumptions for 2020-2100 are based on the 2008 OASDI Trustee's Report long-
 \end{comment}
 
 \subsubsection{Medical Costs Before Age 30 Interview}
+\label{appendix:health-costs-before-age30}
 
 \noindent Data on utilization of medical services is sparse before the age 30 interview. There are questions about utilization in the age 12, 15, and 21 interviews along with records of births for female subjects. We combined this with information about demographics, family structure, and parents' utilization of public services to estimate medical costs at each age from 8 to 32. Models were estimated separately for males and females. All imputation and cost models are estimated using MEPS data. \\
 
