--- a/Appendices/Health/validation.tex
+++ b/Appendices/Health/validation.tex
@@ -1,4 +1,5 @@
 \subsection{Validation}
+\label{appendix:health-validation}
 \noindent To evaluate the performance of the full version of the FAM model, we validate it using various techniques. \\
 %including comparing model results from early years with actual data available for later years.\footnote{\citet{Goldman_etal_2015_Future-America-Model}.} 
 
