--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -5,6 +5,7 @@ sample selections from all of our data sources and other parameters. We analyze 
 
 
 \subsection{Varying the Discount Rate}
+\label{appendix:varying-discount-rate}
 
 %In this section we explore how the internal rate of return and benefit/cost ratio
 %change when we adjust various components of the cash flow, as well as various parameters
@@ -56,6 +57,7 @@ the discount rate, especially for males.
 
 
 \subsection{Varying Deadweight Loss}
+\label{appendix:varying-dwl}
 
 \noindent Below we examine how our estimates of the internal rate of return (IRR) and benefit/cost
 ratios move with respect to changes in the marginal cost of welfare. \\
