--- a/output/alternative_specifications.tex
+++ b/output/alternative_specifications.tex
@@ -1,22 +1,17 @@
 \begin{tabular}{L{2cm} *{21}{c}}
 & \multicolumn{3}{c}{ \textbf{Specification 1:}} & & \multicolumn{3}{c}{ \textbf{Specification 2:}}& & \multicolumn{3}{c}{ \textbf{Specification 3:}}& & \multicolumn{3}{c}{ \textbf{Specification 4:}}& & \multicolumn{3}{c}{ \textbf{Specification 5:}}\\
-
-& & $\bm{\lambda_1} \neq 0$ & & & & $\bm{\lambda_1} = 0$ & & & & $\bm{\lambda_1} \neq 0$ & & & & $\bm{\lambda_1} \neq 0$ & & & \multicolumn{3}{c}{Non-parametric} \\
-
+& & (``Baseline'') & & & &  & & & &  & & & &  & & & \multicolumn{3}{c}{Non-parametric matching} \\
+& & $\bm{\lambda_1} \neq 0$ & & & & $\bm{\lambda_1} = 0$ & & & & $\bm{\lambda_1} \neq 0$ & & & & $\bm{\lambda_1} \neq 0$  \\
 & & $\bm{\bm{\rho}} = 0$ & & & & $\bm{\bm{\rho}} \neq 0$ & & & & $\bm{\bm{\rho}} \neq 0$ & & & & $\bm{\bm{\rho}} = 0$ \\
-
-& & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} \neq 0$   \\  \bottomrule \\[5pt]
-
-
+& & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} = 0$ & & & & $\bm{\bm{f}} \neq 0$   \\  
+\bottomrule \\[5pt]
 & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C & & NPV & IRR & B/C\\
-
 \hline \\
-Pooled & 133,032 & 0.13 & 6.29 &  & 154,547 & 0.15 & 7.31 &  & 268,179 & 0.26 & 12.68 &  & 46,953 & 0.05 & 2.22 &  & 132,924 & 0.13 & 6.28 \\
- & (76,634) & (0.05) & (2.11) &  & (187,036) & (0.12) & (5.15) &  & (211,089) & (0.14) & (5.81) &  & (25,323) & (0.02) & (0.7) &  & (11,253) & (0.01) & (0.31) \\ \\
-
-Males & 238,105 & 0.13 & 11.1 &  & 200,509 & 0.11 & 9.35 &  & 456,078 & 0.25 & 21.26 &  & 74,775 & 0.04 & 3.49 &  & 196,530 & 0.11 & 9.16 \\
- & (185,375) & (0.06) & (6.35) &  & (160,988) & (0.05) & (5.51) &  & (358,534) & (0.12) & (12.28) &  & (54,752) & (0.02) & (1.88) &  & (20,210) & (0.01) & (0.69) \\ \\
-
-Females & 41,908 & 0.1 & 2.45 &  & 79,441 & 0.19 & 4.64 &  & 31,303 & 0.07 & 1.83 &  & 19,959 & 0.05 & 1.17 &  & 69,317 & 0.17 & 4.05 \\ 
- & (24,606) & (0.07) & (0.79) &  & (99,416) & (0.28) & (3.19) &  & (168,160) & (0.48) & (5.4) &  & (34,142) & (0.1) & (1.1) &  & (4,350) & (0.0	1) & (0.14) \\ \\ \\ \bottomrule
+Pooled & 636,674 & 0.14 & 7.33 &  & 154,547 & 0.15 & 7.31 &  & 268,179 & 0.26 & 12.68 &  & 46,953 & 0.05 & 2.22 &  & 132,924 & 0.13 & 6.28 \\
+ & (183,224) & (0.03) & (1.84) &  & (187,036) & (0.12) & (5.15) &  & (211,089) & (0.14) & (5.81) &  & (25,323) & (0.02) & (0.7) &  & (11,253) & (0.01) & (0.31) \\ \\
+Males & 919,049 & 0.15 & 10.19  &  & 200,509 & 0.11 & 9.35 &  & 456,078 & 0.25 & 21.26 &  & 74,775 & 0.04 & 3.49 &  & 196,530 & 0.11 & 9.16 \\
+ & (287,442) & (0.04) & (2.93) &  & (160,988) & (0.05) & (5.51) &  & (358,534) & (0.12) & (12.28) &  & (54,752) & (0.02) & (1.88) &  & (20,210) & (0.01) & (0.69) \\ \\
+Females & 161,759 & 0.10 & 2.61 &  & 79,441 & 0.19 & 4.64 &  & 31,303 & 0.07 & 1.83 &  & 19,959 & 0.05 & 1.17 &  & 69,317 & 0.17 & 4.05 \\
+ & (72,355) & (0.06) & (0.73) &  & (99,416) & (0.28) & (3.19) &  & (168,160) & (0.48) & (5.4) &  & (34,142) & (0.1) & (1.1) &  & (4,350) & (0.0	1) & (0.14) \\ \\ \\ 
+ \bottomrule
 \end{tabular}
