--- a/output/venn_pooled.tex
+++ b/output/venn_pooled.tex
@@ -18,20 +18,20 @@
   \draw[black, very thick, fill=green, opacity=.2] (-.65,.05) ellipse (2 and .35);
 \end{scope}
 
-\draw (-4.25,2) node[align=center, below] {\footnotesize 3.4\% \\ \footnotesize  1.2 }; 		%A
-\draw (-0.75,5.5) node[align=center, below] {\footnotesize 2.9\% \\ \footnotesize 0.57 }; 						%B
-\draw (3.75,5.25) node[align=center, below] {\footnotesize 5.7\% \\ \footnotesize 1.2  }; 				%C
-\draw (7.25, 1.75) node[align=center, below] {\footnotesize 4.0\% \\  \footnotesize 1.3 }; 						%D
-\draw (-2.5,3.5) node[align=center, below] {\footnotesize 4.6\% \\ \footnotesize 1.7 }; 						%AB
-\draw (-.5,-1.5) node[align=center, below] {\footnotesize \textit{\textbf{10.7\%}} \\ \footnotesize \textit{\textbf{2.3}} }; 				%AC
-\draw (2,-2.5) node[align=center, below] {\footnotesize \textit{\textbf{6.4\%}}  \\ \footnotesize  \textit{\textbf{2.5}} }; 						%AD
-\draw (1.75,3.75) node[align=center, below] {\footnotesize 6.1\% \\ \footnotesize 1.7 }; 					%BC
-\draw (4.25,-1.5) node[align=center, below] {\footnotesize 4.5\% \\ \footnotesize 1.9 }; 						%BD
-\draw (5.5,3.5) node[align=center, below] {\footnotesize \textit{\textbf{8.7\%}}  \\ \footnotesize \textit{\textbf{2.5}}}; 			%CD
-\draw (0.25, 1.75) node[align=center, below] {\footnotesize 8.5\% \\ \footnotesize \textit{\textbf{2.9}}  }; 					%ABC
-\draw (3.25,-1.9) node[align=center, below] {\footnotesize \textit{\textbf{6.3\%}} \\ \footnotesize \textit{ \textbf{3.1}}}; 						%ABD
-\draw (0.75,-2.1) node[align=center, below] {\footnotesize \textit{\textbf{11.4\%}} \\ \footnotesize \textit{\textbf{3.7} } }; 			%ACD
-\draw (3.25, 1.75) node[align=center, below] {\footnotesize \textit{\textbf{8.2\%}} \\ \footnotesize \textit{\textbf{3.06}}}; 					%BCD
+\draw (-4.25,2) node[align=center, below] {\large 3.4\% \\ \large  1.2 }; 		%A
+\draw (-0.75,5.5) node[align=center, below] {\large 2.9\% \\ \large 0.57 }; 						%B
+\draw (3.75,5.25) node[align=center, below] {\large 5.7\% \\ \large 1.2  }; 				%C
+\draw (7.25, 1.75) node[align=center, below] {\large 4.0\% \\  \large 1.3 }; 						%D
+\draw (-2.5,3.5) node[align=center, below] {\large 4.6\% \\ \large 1.7 }; 						%AB
+\draw (-.5,-1.5) node[align=center, below] {\normalsize \textit{\textbf{10.7\%}} \\ \normalsize \textit{\textbf{2.3}} }; 				%AC
+\draw (2,-2.5) node[align=center, below] {\normalsize \textit{\textbf{6.4\%}}  \\ \normalsize  \textit{\textbf{2.5}} }; 						%AD
+\draw (1.75,3.75) node[align=center, below] {\large 6.1\% \\ \large 1.7 }; 					%BC
+\draw (4.25,-1.5) node[align=center, below] {\normalsize 4.5\% \\ \normalsize 1.9 }; 						%BD
+\draw (5.5,3.5) node[align=center, below] {\large \textit{\textbf{8.7\%}}  \\ \large \textit{\textbf{2.5}}}; 			%CD
+\draw (0.25, 1.75) node[align=center, below] {\large 8.5\% \\ \large \textit{\textbf{2.9}}  }; 					%ABC
+\draw (3.25,-1.9) node[align=center, below] {\small \textit{\textbf{6.3\%}} \\ \small \textit{ \textbf{3.1}}}; 						%ABD
+\draw (0.72,-2.07) node[align=center, below] {\small \textit{\textbf{11.4\%}} \\ \small \textit{\textbf{3.7} } }; 			%ACD
+\draw (3.25, 1.75) node[align=center, below] {\large \textit{\textbf{8.2\%}} \\ \large \textit{\textbf{3.06}}}; 					%BCD
 \draw (1.75,0) node[align=center, below] {\large \textit{\textbf{13.7\%}} \\ \large \textit{\textbf{7.3}} }; 													%ABCD
 
 
